# linmon

./: CODE_FLOW.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: minimal.yaml  sample.yaml
linmon/: __init__.py  __main__.py  cli.py  core.py
linmon/alerts/: __init__.py  base.py  file.py  stdout.py
linmon/collectors/: __init__.py  logs.py  processes.py  procfs.py  psi.py
linmon/config/: __init__.py  defaults.py  loader.py  schema.py
linmon/monitors/: __init__.py  base.py  cpu.py  iostuck.py  storage.py
linmon/report/: __init__.py  builder.py  json.py  text.py
linmon/rules/: __init__.py  engine.py  model.py  operators.py
linmon/state/: __init__.py  manager.py  model.py
linmon/triage/: __init__.py  model.py  scorer.py
linmon/util/: __init__.py  fs.py  shell.py  time.py
scripts/: install.sh
systemd/: linmon.service  linmon.timer
tests/fixtures/: kernel_logs.txt  pressure_io.txt  proc_stat.txt
tests/unit/: test_config.py  test_cpu.py  test_iostuck.py  test_rules.py  test_storage.py
